--- a/flat.css
+++ b/flat.css
@@ -61,10 +61,11 @@ body {
   height: 50px;
   width: 50px;
   position: absolute;
-  background: red;
-  z-index: 1;
+  background: whitesmoke;
+  border: 1px solid black;
+  z-index: 100;
   /* visibility: hidden; */
-  display: none;
+  /* display: none; */
 }
 #container{
   width: 100vw;
