--- a/flat.css
+++ b/flat.css
@@ -1,60 +1,86 @@
 body {
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+#wrap{
+  display: flex;
+  height: 100vh;
+  margin-left: 6vh;
+  margin-bottom: 6vh;
+  position: absolute;
+  top: 0px;
+  justify-content: space-between;
+  flex-direction: column;
+  scroll-snap-type: block;
+  /* bottom: 200px; */
+  /* backdrop-filter: blur( 10.0px );
+  -webkit-backdrop-filter: blur( 10.0px ); */
 }
 .n{
   display: flex;
-  justify-content:
-  space-evenly;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: left;
+  scroll-snap-align: center;
+  /* flex-direction: column; */
   z-index: 1;
-  position: absolute;
-  top: 100px;
-  width: 300px;
+  /* margin: 20vh;
+  /* position: auto; */
+  /* flex: 1; */
+  /* top: 0px; */
+  width: 350px;
   height: 50px;
   /* background: rgb(250, 250, 250, 0.9);
   border-radius: 4px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px); */
-  -moz-user-select: none;
+  /* -moz-user-select: none;
 	-webkit-user-select: none;
 	/* -ms-user-select: none; */
-	user-select: auto;
+	/* user-select: auto; */
 	/* pointer-events: none; */
 	/* z-index: ; */
 	background: rgba(235, 235, 235, 0.876);
   /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1); */
-  backdrop-filter: blur( 10.0px );
-  -webkit-backdrop-filter: blur( 10.0px );
+  backdrop-filter: blur( 5.0px );
+  -webkit-backdrop-filter: blur( 5.0px );
   border-radius: 4px;
 }
 .n1{
-  display: flex;
-   justify-content:space-evenly;
+  /* display: flex;
+   justify-content:space-evenly; */
    z-index: 1;
-  position: absolute;
-  top: 200px;
+   /* flex: 2; */
+  /* position: inherit; */
+  /* top: 200px; */
+  /* margin: 10vh; */
   background: rgba(231, 99, 11, 0.4);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  /* -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); */
 }
 .n2{
-  display: flex;
-  justify-content:space-evenly;
-  position: absolute;
-  top: 300px;
+  /* display: flex;
+  justify-content:space-evenly; */
+  /* position: relative; */
+  /* margin: 10vh; */
+  /* top: 300px; */
   background:  rgba(165, 164, 164, 0.4);
 }
 .n3{
-  display: flex;
-  justify-content:space-evenly;
-  position: absolute;
-  top: 400px;
+  /* display: flex;
+  justify-content:space-evenly; */
+  /* position: relative; */
+  /* margin: 10vh; */
+  /* top: 400px; */
   background:  rgba(231, 78, 198, 0.4);
 }
 .n4{
-  display: flex;
-   justify-content:space-evenly;
-   position: absolute;
-   top: 500px;
+  /* display: flex;
+   justify-content:space-evenly; */
+   /* position: relative; */
+   /* margin-bottom: 10vh; */
+   /* top: 500px; */
    background:  rgba(61, 214, 241, 0.4);
   }
 #block{
@@ -75,7 +101,7 @@ body {
   left: 0;
   z-index: -100;
   /* pointer-events: none; */
-  background: linear-gradient(rgb(0, 0, 0,0.6), rgb(10, 10, 10));
+  background: linear-gradient(rgba(255, 255, 255, 0.856), rgb(3, 3, 3));
 }
 ul {
   width: 3vw;
@@ -88,6 +114,8 @@ ul {
   margin: 2vw;
   padding: 0;
   border-radius: 3px;
+  backdrop-filter: blur( 5.0px );
+  -webkit-backdrop-filter: blur( 5.0px );
 }
 li {
   font-size: 25px;
@@ -95,6 +123,8 @@ li {
   border: 1px solid rgb(0, 0, 0, 0.5);
   background-color:  rgba(17, 17, 17, 0.4);
   border-radius: 3px;
+  backdrop-filter: blur( 5.0px );
+  -webkit-backdrop-filter: blur( 5.0px );
 }
 li:hover{
   background-color: rgb(241, 241, 241);
