--- a/flat.css
+++ b/flat.css
@@ -6,7 +6,7 @@ body {
 #wrap{
   display: flex;
   height: 100vh;
-  margin-left: 6vh;
+  margin-left: 10vh;
   margin-bottom: 20vh;
   /* position: absolute; */
   top: 0px;
@@ -16,12 +16,13 @@ body {
   /* bottom: 200px; */
   /* backdrop-filter: blur( 10.0px );
   -webkit-backdrop-filter: blur( 10.0px ); */
+  transition: hidden 0.2s;
 }
 .n{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  text-align: left;
+  /* display: flex; */
+  /* justify-content: space-evenly; */
+  /* align-items: center; */
+  text-align: center;
   /* scroll-snap-align: center; */
   /* flex-direction: column; */
   z-index: 1;
@@ -31,7 +32,7 @@ body {
   /* flex: 1; */
   /* top: 0px; */
   width: 325px;
-  height: 50px;
+  height: 180px;
   /* background: rgb(250, 250, 250, 0.9);
   border-radius: 4px;
   -webkit-backdrop-filter: blur(10px);
@@ -42,10 +43,10 @@ body {
 	/* user-select: auto; */
 	/* pointer-events: none; */
 	/* z-index: ; */
-	background: rgba(235, 235, 235, 0.876);
+	background: rgba(246, 246, 246, 0.726);
   /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1); */
-  backdrop-filter: blur( 5.0px );
-  -webkit-backdrop-filter: blur( 5.0px );
+  backdrop-filter: blur( 10.0px );
+  -webkit-backdrop-filter: blur( 10.0px );
   border-radius: 4px;
 }
 .n1{
@@ -56,7 +57,7 @@ body {
   /* position: inherit; */
   /* top: 200px; */
   margin-bottom: 20vh;
-  margin-top: 25vh;
+  margin-top: 20vh;
   background: rgba(231, 99, 11, 0.2);
   /* -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px); */
@@ -66,7 +67,7 @@ body {
   justify-content:space-evenly; */
   /* position: relative; */
   margin-bottom: 20vh;
-  margin-top: 25vh;
+  margin-top: 5vh;
   /* top: 300px; */
   background:  rgba(165, 164, 164, 0.2);
 }
@@ -75,7 +76,7 @@ body {
   justify-content:space-evenly; */
   /* position: relative; */
   margin-bottom: 10vh;
-  margin-top: 25vh;
+  margin-top: 5vh;
   /* top: 400px; */
   background:  rgba(231, 78, 198, 0.2);
 }
@@ -84,7 +85,7 @@ body {
    justify-content:space-evenly; */
    /* position: relative; */
    margin-bottom: 10vh;
-   margin-top: 35vh;
+   margin-top: 25vh;
    /* top: 500px; */
    background:  rgba(61, 214, 241, 0.2);
   }
@@ -136,7 +137,7 @@ li:hover{
   border: 2px solid rgba(255, 255, 255, 0.822);
 }
 .nav{
-  top: 10vh;
+  top: 12vh;
   margin-right: 3vw;
 }
 #portfolio{
