--- a/flat.css
+++ b/flat.css
@@ -2,6 +2,7 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  background-image: url('./img/blackbrick.jpg');
 }
 #wrap{
   display: flex;
@@ -43,10 +44,10 @@ body {
 	/* user-select: auto; */
 	/* pointer-events: none; */
 	/* z-index: ; */
-	background: rgba(246, 246, 246, 0.726);
+	background: rgba(246, 246, 246, 0.2);
   /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.1); */
-  backdrop-filter: blur( 10.0px );
-  -webkit-backdrop-filter: blur( 10.0px );
+  backdrop-filter: blur( 5.0px );
+  -webkit-backdrop-filter: blur( 5.0px );
   border-radius: 4px;
 }
 .n1{
@@ -107,7 +108,7 @@ body {
   left: 0;
   z-index: -100;
   /* pointer-events: none; */
-  background: linear-gradient(rgba(255, 255, 255, 0.856), rgb(218, 218, 218));
+  /* background: linear-gradient(rgba(255, 255, 255, 0.856), rgb(218, 218, 218)); */
 }
 ul {
   width: 3vw;
