--- a/flat.css
+++ b/flat.css
@@ -21,7 +21,8 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  background-image: url('./img/blackbrick.jpg');
+  /* background-image: url('./img/blackbrick.jpg'); */
+  background-color: black;
 }
 #wrap{
   display: flex;
@@ -123,7 +124,7 @@ body {
 #container{
   width: 100vw;
   height: 100vh;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: -100;
@@ -132,7 +133,7 @@ body {
 }
 ul {
   width: 3vw;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   z-index: 100;
