--- a/flat.css
+++ b/flat.css
@@ -22,7 +22,7 @@ body {
   display: flex;
   flex-direction: column;
   /* background-image: url('./img/blackbrick.jpg'); */
-  background-color: black;
+  background-color: rgb(22, 21, 24);
 }
 #wrap{
   display: flex;
